--- a/app/src/main/res/layout/activity_payment_screen.xml
+++ b/app/src/main/res/layout/activity_payment_screen.xml
@@ -87,7 +87,7 @@
         android:layout_marginBottom="12dp"
         android:text="@string/form_payment"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_GoToScheduling"
+        app:layout_constraintBottom_toTopOf="@+id/button_finishPedido"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent" />
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toTopOf="@+id/text_forma_escolhida" />
 
     <Button
-        android:id="@+id/button_GoToScheduling"
+        android:id="@+id/button_finishPedido"
         android:layout_width="294dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
